feat: user 친구들 조회 - 구현 목록 최신화